--- a/index.Rmd
+++ b/index.Rmd
@@ -1,19 +1,22 @@
 ---
-title: "Nathaniel D. Phillips, PhD."
+title: "Dominique Makowski, MSc."
 ---
 
 ```{r, out.width = "800px", echo = FALSE, fig.align='center'}
 knitr::include_graphics("media/brooklyn (1 of 1)-2.jpg")
+
+# USE rmarkdown::render_site(encoding = "UTF-8") to render the website. Then push with github.
 ```
 
+Use http://existentialcomics.com/
 
-You have reached the personal webpage of Nathaniel Phillips. If you're looking to learn about my approach to statistical programming with R, decision making research, and open science, you're in the right place!
+You have reached the personal webpage of Dominique Makowski. If you're looking to learn about me, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website that I like, mainly because it's funny.
 
 I am a currently post-doctoral researcher in the department of [Economic Psychology](https://psycho.unibas.ch/en/centers/abteilung-details/home/abteilung/economic-psychology/) at the University of Basel.
 
 To learn more about [me](about.html), my book [YaRrr! The Pirate's Guide to R](piratesguide.html), [tutorials](tutorials.html), [R packages](packages.html), or to check out my [blog](https://ndphillips.github.io/blog/), click one of the buttons in the Navigation bar.
 
-You can also <a href="mailto:nathaniel.d.phillips.is@gmail.com" target="_top">send me an email</a>.
+You can also <a href="mailto:dom.makowski@gmail.com" target="_top">send me an email</a>.
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
