--- a/index.Rmd
+++ b/index.Rmd
@@ -3,12 +3,11 @@ title: "Dominique Makowski, MSc."
 ---
 
 ```{r, out.width = "800px", echo = FALSE, fig.align='center'}
-knitr::include_graphics("media/brooklyn (1 of 1)-2.jpg")
+knitr::include_graphics("media/budapest1.jpg")
 
 # USE rmarkdown::render_site(encoding = "UTF-8") to render the website. Then push with github.
 ```
 
-Use http://existentialcomics.com/
 
 You have reached the personal webpage of Dominique Makowski. If you're looking to learn about me, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website that I like, mainly because it's funny.
 
