--- a/index.Rmd
+++ b/index.Rmd
@@ -11,17 +11,17 @@ knitr::include_graphics("media/budapest1.jpg")
 
 You have reached the personal webpage of Dominique Makowski. If you're looking to learn about me, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website that I like, mainly because it's funny.
 
-I am a currently PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
+I am a currently PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cit\'e.
 
 
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!-- <script> -->
+<!--   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
+<!--   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
+<!--   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
+<!--   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); -->
 
-  ga('create', 'UA-89596306-1', 'auto');
-  ga('send', 'pageview');
+<!--   ga('create', 'UA-89596306-1', 'auto'); -->
+<!--   ga('send', 'pageview'); -->
 
-</script>
+<!-- </script> -->
