--- a/about.Rmd
+++ b/about.Rmd
@@ -17,3 +17,8 @@ You can download my full CV with the following links:
 - <a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a>
 
 - <a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a>
+
+[@surowiecki2005wisdom]
+
+# References
+
