--- a/index.Rmd
+++ b/index.Rmd
@@ -3,15 +3,15 @@ title: "Dominique Makowski, MSc."
 ---
 
 ```{r, out.width = "800px", echo = FALSE, fig.align='center'}
-knitr::include_graphics("media/coke.jpg")
+knitr::include_graphics("media/playa.jpg")
 
 # USE rmarkdown::render_site(encoding = "UTF-8") to render the website. Then push with github.
 ```
 
 
-You have reached the personal webpage of Dominique Makowski. If you're looking to learn about me, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website that I like, mainly because it's funny.
+You have reached the personal webpage of Dominique Makowski. If you're looking to learn about me, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website, mainly because it's funny.
 
-I am a currently PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cit\'e.
+I am a currently PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
 
 
 
