--- a/about.Rmd
+++ b/about.Rmd
@@ -3,7 +3,7 @@ title: "About me"
 ---
 
 ```{r, out.width = "500px", echo = FALSE, eval = TRUE, fig.align='center'}
-knitr::include_graphics("media/Profile.jpg")
+knitr::include_graphics("media/Profile.png")
 ```
 
 
