--- a/index.Rmd
+++ b/index.Rmd
@@ -15,13 +15,13 @@ I am a currently PhD student in the [Memory & Cognition Lab'](http://recherche.p
 
 
 
-<!-- <script> -->
-<!--   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
-<!--   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
-<!--   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
-<!--   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-<!--   ga('create', 'UA-89596306-1', 'auto'); -->
-<!--   ga('send', 'pageview'); -->
+  ga('create', 'UA-98191491-1', 'auto');
+  ga('send', 'pageview');
 
-<!-- </script> -->
+</script>
