--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Dominique Makowski, MSc."
 ---
 
 ```{r, out.width = 800, echo = FALSE, fig.align='center'}
-knitr::include_graphics("media/cambodia.jpg")
+knitr::include_graphics("media/angkor.jpg")
 
 # USE rmarkdown::render_site(encoding = "UTF-8") to render the website. Then push with github.
 ```
@@ -11,8 +11,10 @@ knitr::include_graphics("media/cambodia.jpg")
 
 You have reached my personal webpage. If you're looking to learn about me, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website, mainly because it's funny.
 
-I am a currently PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
+I am currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
 
+
+*PS: I made this website using R.*
 
 
 <script>
