--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ knitr::include_graphics("media/angkor.jpg")
 
 You have reached my personal webpage. If you're looking to learn about me, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website, mainly because it's funny.
 
-I am currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
+I'm currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
 
 
 *PS: I made this website using R.*
