--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "Dominique Makowski, MSc."
 ---
 
-```{r, out.width = 800, echo = FALSE, fig.align='center'}
+```{r, out.width = 600, echo = FALSE, fig.align='center'}
 knitr::include_graphics("media/ski.jpg")
 
 # USE rmarkdown::render_site(encoding = "UTF-8") to render the website. Then push with github.
@@ -11,7 +11,7 @@ knitr::include_graphics("media/ski.jpg")
 
 You have reached my personal webpage. If you're looking to learn about what I'm doing, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website, mainly because it's funny.
 
-I'm currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cité.
+I'm currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Citéèé.
 
 
 *PS: I made this website using R.*
