--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ knitr::include_graphics("media/ski.jpg")
 
 You have reached my personal webpage. If you're looking to learn about what I'm doing, you're in the right place! Otherwise, you can visit [this](http://existentialcomics.com/) website, mainly because it's funny.
 
-I'm currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Citéèé.
+I'm currently a PhD student in the [Memory & Cognition Lab'](http://recherche.parisdescartes.fr/LaboratoireMemoireCognition) at the University of Sorbonne Paris Cit???.
 
 
 *PS: I made this website using R.*
