--- a/research.Rmd
+++ b/research.Rmd
@@ -37,7 +37,7 @@ Sperduti, M., Armougum, A., **Makowski, D.** & Piolino, P. (*under review*). *In
 
 **Makowski, D.**\*, Sperduti, M.\*, Nicolas, S. & Piolino, P. (*under review*). "Being there" *and remembering it: Presence improves Memory Encoding*. Consciousness & Cognition.
 
-Sperduti, M., **Makowski, D.** & Piolino, P. (*under review*). *Méditer pour bien vieillir ? Les possibles bienfaits des pratiques méditatives sur le déclin cognitif lié à l’âge | Meditation and Successful Ageing: can Meditative Practices Counteract Age-related Cognitive Decline?*, Psychologie Française.
+Sperduti, M., **Makowski, D.** & Piolino, P. (2017). [*Méditer pour bien vieillir ? Les possibles bienfaits des pratiques méditatives sur le déclin cognitif lié à l’âge | Meditation and successful aging: can meditative practices counteract age-related cognitive decline?*](https://dominiquemakowski.github.io/papers/sperduti2017b.pdf), Gériatrie et Psychologie Neuropsychiatrie du Vieillissement, 15 (2),  205-13.
 
 Sperduti, M.\*, **Makowski, D.**\*, Arcangeli, M., Wantzen, P., Zalla, T., Lemaire, S., Dokic, J., Pelletier, J. & Piolino, P. (2017). [*The Distinctive Role of Executive Functions in Implicit Emotion Regulation*](https://dominiquemakowski.github.io/papers/sperduti2017.pdf). Acta Psychologica, 173, 13-20.
 
